# geoserver-rest

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yaml
continuous_integration/: environment.yaml
examples/: abstract_text.txt  create_layers.yaml  create_s3_layers.yml  granules.yaml  posttroll_adder.yaml  s3_coverage_template.xml
georest/: __init__.py  add_granule.py  add_s3_granule.py  create_layer_directories.py  delete_granule.py  delete_old_granules_and_files.py  layers_create.py  posttroll_adder.py  s3_layers_create.py  utils.py
georest/tests/: test_geoserver.py  test_utils.py
